--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,5 @@
 	defaultBranch = main
 [push]
 	autoSetupRemote = true
+[alias]
+	hist = log --pretty=format:'%C(yellow)[%ad]%C(reset) %C(green)[%h]%C(reset) | %C(red)%s %C(bold red){{%an}}%C(reset) %C(blue)%d%C(reset)' --graph --date=short
