Change git config; add path exports

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,11 +4,29 @@
 [core]
 	editor = vim
 	excludesFile = /Users/rubenjs/.dotfiles/.gitignore_global
-[pull]
-	rebase = false
+	fsmonitor = true
+        untrackedCache = true
 [init]
 	defaultBranch = main
+
+[pull]
+	rebase = false
 [push]
-	autoSetupRemote = true
+        autoSetupRemote = true
+[rerere]
+	enabled = true
+	autoUpdate = true
 [alias]
 	hist = log --pretty=format:'%C(yellow)[%ad]%C(reset) %C(green)[%h]%C(reset) | %C(red)%s %C(bold red){{%an}}%C(reset) %C(blue)%d%C(reset)' --graph --date=short
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %r
+	process = git-lfs filter-process
+	required = true
+[includeIf "gitdir:~/projects/Webricolage"]
+        path = ~/Projects/.gitconfig
+[includeIf "gitdir:~/projects/RubenSibon"]
+        path = ~/Projects/.gitconfig
+[includeIf "gitdir:~/projects/Amsterdam"]
+        path = ~/Projects/Amsterdam/.gitconfig
+
