Add VSCode config

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
 *
-!.antigen
-!.dotfiles
-!.dotfiles/*
-!.dotfiles/scripts
-!.dotfiles/scripts/*
-.dotfiles/scripts/.last_checked
-!.fzf
+!.antigen/
+!.dotfiles.code-workspace
+!.dotfiles/
+!.fzf/
 !.gitconfig
+!.github/
 !.gitignore
 !.gitmodules
 !.hidden
-!.hyper.js
-!.vim
-!.vim/bundle
-!.vim/bundle/Vundle.vim
+!.vim/
 !.vimrc
+!.vscode/
 !.zshrc
